
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int tmp ;
struct uids {int fsuid; int suid; int euid; int uid; } ;
typedef int FILE ;


 int SEEK_SET ;
 int TMPSIZE ;
 int UIDNUM ;
 int fgets (char*,int,int *) ;
 int fscanf (int *,char*,int *,int *,int *,int *) ;
 int fseek (int *,int ,int ) ;

int get_ids(FILE * fp, struct uids *uids)
{
    int i;
    char tmp[TMPSIZE];


    fseek(fp, 0, SEEK_SET);
    for (i = 0; i < UIDNUM; i++)
 fgets(tmp, sizeof(tmp), fp);
    return fscanf(fp, "Uid: %u %u %u %u", &uids->uid, &uids->euid,
    &uids->suid, &uids->fsuid);
}
